# CPPProjects

./: .gitignore
CodeSnippets/: .gitignore  AbstractFactory.cpp  AdapterPattern.cpp  BinaryTree.cpp  BridgePattern.cpp  BuilderPattern.cpp  ClassFnOverload.cpp  CompleteDecorder.cpp  CopyCtor.cpp  Decoder.cpp  FactoryPattern.cpp  HoneywellIview.cpp  ImxTrials.cpp  LinkedList.cpp  LinkedListTemplate.cpp  PrototypePattern.cpp  ProxyPattern.cpp  ReadMe.txt  Singleton.cpp  SingletonPattern.cpp  VirtualClasses.cpp  cprograms.cpp
CodeSnippets/CodeSnippets/: CodeSnippets.sln  CodeSnippets.vcxproj
CodeSnippets_2/: BestSum.cpp  BitOperations.cpp  CanSum.cpp  CompleteDecorder.cpp  DrawTriangle.cpp  FibonocciNumber.cpp  GridTraveller.cpp  HowSum.cpp  MaxSubArray.cpp  MoveSemantics.cpp  SpinLockTest.cpp  VirtualCars.cpp  XYPlaneDraw.cpp
DejTCPServer/: readme.txt
DejTCPServer/include/TCPServer/: BThread.h  TCPConnection.h  TCPData.h  TCPServer.h  TCPServer_example.h
DejTCPServer/include/TestClient/: TCPClient.h
DejTCPServer/src/TCPServer/: BThread.cpp  CMakeLists.txt  ServerMain.cpp  TCPConnection.cpp  TCPData.cpp  TCPServer.cpp  TCPServer_example.cpp
DejTCPServer/src/TestClient/: CMakeLists.txt  ClientMain.cpp  TCPClient.cpp
